--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7,8 +7,9 @@
 @import "./components/ancre_body.scss";
 @import "./components/explication_fonctionnement.scss";
 @import "./components/recherche_accueil.scss";
+@import "./components/icon_heart";
 
-@import "./components/palette_du_gout.scss";
+@import "./components/choix_plats_restos.scss";
 
 @import "./layouts/header.scss";
 @import "./layouts/footer.scss";
