--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,7 +6,10 @@ $color-link: #fff;
 $background-footer: #464646;
 $ombre-btn: #cac8c8b8;
 
+$marge-centrer: auto;
 
-$margin: 0px 20px 24px;
-$padding: 0px 14px 20px 10px 6px 16px 18px 25px;
-$size: 11px 15px 16px 17px 20px;
+
+$margin: 0px 20px 24px 14px 38px 12px;
+$padding: 0px 14px 20px 10px 6px 16px 18px 25px 12px;
+$size: 11px 15px 16px 17px 20px 26px 18px 12px;
+$width: 40px 220px 100% 50% 206px;
