--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,6 +1,7 @@
 @import "./utils/_variables.scss";
 @import "./utils/_typography.scss";
 @import "./utils/_mixin.scss";
+@import "./utils/keyframes";
 
 @import "./components/form_accueil.scss";
 @import "./components/list-resto.scss";
