--- a/sass/components/_icon_heart.scss
+++ b/sass/components/_icon_heart.scss
@@ -2,6 +2,10 @@
     @include icon-heart;
     z-index: 3;
 
+    &--heart {
+        @include heart-right
+    }
+
     &:hover {
         color: white;
         z-index: 2;
@@ -12,6 +16,10 @@
     color: white;
     @include icon-heart;
     z-index: 2;
+
+    &--heart {
+        @include heart-right
+    }
 
     &:hover {
         @include heart-hover;
