--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,3 @@
-@keyframes apparition {
-  0% {
-    transform: translatey(10%);
-    opacity: 0%;
-  }
-  50% {
-    transform: translatey(5%);
-    opacity: 0.1%;
-  }
-  100% {
-    transform: translatey(0%);
-  }
-}
 @font-face {
   font-family: shrikhand;
   src: url(../sass/police/shrihand/Shrikhand-Regular.ttf);
@@ -212,7 +199,7 @@ a {
 .border-heart--heart {
   right: 6%;
 }
-.border-heart:hover {
+.border-heart:active {
   color: white;
   z-index: 2;
 }
