--- a/sass/components/_icon_heart.scss
+++ b/sass/components/_icon_heart.scss
@@ -6,12 +6,12 @@
         @include heart-right
     }
 
-    &:hover {
+    &:active {
         color: white;
         z-index: 2;
+        
     }
 }
-
 .heart-colorer {
     color: white;
     @include icon-heart;
@@ -20,7 +20,6 @@
     &--heart {
         @include heart-right
     }
-
     &:hover {
         @include heart-hover;
     }
