--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5,12 +5,14 @@
 
 @import "./components/form_accueil.scss";
 @import "./components/list-resto.scss";
+@import "./components/animation-plats.scss";
 @import "./components/ancre_body.scss";
 @import "./components/explication_fonctionnement.scss";
 @import "./components/recherche_accueil.scss";
-@import "./components/icon_heart";
+@import "./components/icon_heart.scss";
+@import "./components/btn.scss";
 
 @import "./components/choix_plats_restos.scss";
 
-@import "./layouts/header.scss";
-@import "./layouts/footer.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
