--- a/sass/components/_list-resto.scss
+++ b/sass/components/_list-resto.scss
@@ -16,9 +16,10 @@
             margin: 0px;
             background-color: #fff;
             border-radius: 20px;
+            box-shadow: $ombre-btn 0px 5px 9px;
 
             &:hover {
-                box-shadow: darken($ombre-btn, 30%) 0px 5px 9px;
+                box-shadow: darken($ombre-btn, 20%) 0px 5px 9px;
             }
 
             .nouveau {
