--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,12 +4,12 @@ $color-tertiaire: #99e2d0;
 $background-gris-clair: #e7e4e4a6;
 $color-link: #fff;
 $background-footer: #464646;
-$ombre-btn: #cac8c8b8;
+$ombre-btn: #74747480;
 
 $marge-centrer: auto;
 
 
-$margin: 0px 20px 24px 14px 38px 12px;
+$margin: 0px 20px 24px 14px 38px 12px 30px;
 $padding: 0px 14px 20px 10px 6px 16px 18px 25px 12px;
 $size: 11px 15px 16px 17px 20px 26px 18px 12px;
 $width: 40px 220px 100% 50% 206px;
