--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,43 @@
 }
 @keyframes apparition {
   0% {
-    transform: translatey(10%);
+    transform: translate(0px, 10px);
     opacity: 0%;
   }
   50% {
-    transform: translatey(5%);
+    transform: translate(0px, 5px);
     opacity: 0.1%;
   }
   100% {
-    transform: translatey(0%);
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes checkbox {
+  from {
+    transform: rotateY(-100deg);
+    transform-origin: right;
+    opacity: 0;
+  }
+  to {
+    transform: rotateY(0);
+    transform-origin: right;
+    opacity: 1;
+  }
+}
+@keyframes check {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+@keyframes prix {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  100% {
+    transform: translate(-50px, 0px);
   }
 }
 .explorer-restos {
@@ -100,13 +128,13 @@
   animation: apparition 8s;
 }
 .fieldset--plat-1 {
-  animation: apparition 12s;
+  animation: apparition 4s;
 }
 .fieldset--plat-2 {
-  animation: apparition 14s;
+  animation: apparition 6s;
 }
 .fieldset--plat-3 {
-  animation: apparition 16s;
+  animation: apparition 8s;
 }
 .fieldset--dessert-1 {
   animation: apparition 20s;
@@ -122,10 +150,24 @@
   animation: apparition 2s;
 }
 .titre-section--plat {
-  animation: apparition 10s;
+  animation: apparition 2s;
+  animation-delay: 10s;
 }
 .titre-section--dessert {
   animation: apparition 18s;
+}
+
+.btn-check {
+  animation: checkbox 1s;
+}
+
+.btn-check__icon {
+  animation: check 900ms;
+}
+
+.fieldset:hover h6 {
+  animation: prix 0.55s;
+  animation-fill-mode: both;
 }
 
 body {
@@ -214,6 +256,7 @@ a {
   position: absolute;
   right: 10%;
   font-size: 26px;
+  margin-top: 30px;
   z-index: 3;
 }
 .border-heart:active {
@@ -233,6 +276,7 @@ a {
   position: absolute;
   right: 10%;
   font-size: 26px;
+  margin-top: 30px;
   z-index: 2;
   transform: scaley(0);
   transition: transform 300ms;
@@ -287,9 +331,8 @@ a {
 
 .header-form {
   display: flex;
-  align-items: center;
   flex-direction: row;
-  border-radius: 25px 25px 0px 0px;
+  border-radius: 40px 40px 0px 0px;
   margin-top: -38px;
   background: white;
   position: relative;
@@ -297,9 +340,11 @@ a {
 }
 .header-form__title {
   font-family: shrikhand;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 500;
+  padding-top: 26px;
   padding-left: 20px;
+  margin: 0;
 }
 
 .hidden {
@@ -310,9 +355,10 @@ a {
   border-bottom: 4px solid #99e2d0;
   width: 40px;
   padding-bottom: 6px;
-  margin-bottom: 12px;
-  font-size: 18px;
-  margin-left: 18px;
+  margin-top: 40px;
+  font-size: 16px;
+  margin-left: 15px;
+  font-weight: 500;
 }
 .titre-section--espace {
   margin-left: 60px;
@@ -321,7 +367,7 @@ a {
 .fieldset {
   border: none;
   margin: 14px;
-  padding: 20px;
+  padding: 13px;
   border-radius: 15px;
   box-shadow: rgba(91, 91, 91, 0.5019607843) 0px 0px 20px;
   margin-bottom: 14px;
@@ -329,23 +375,8 @@ a {
 .fieldset:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 0px 20px;
 }
-.fieldset__align-prix {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin: 0;
-}
-.fieldset dt {
-  margin: 0px;
-  font-size: 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 220px;
-  white-space: nowrap;
-}
-.fieldset h6 {
-  margin: 0px;
+.fieldset:hover dt {
+  width: 175px;
 }
 .fieldset:hover .btn-check {
   display: block;
@@ -353,21 +384,45 @@ a {
   border: none;
   border-radius: 0px 15px 15px 0px;
   background: #99e2d0;
-  padding: 23px 28px;
+  padding: 26px 18px;
   right: 14px;
-  margin-top: -21px;
+  margin-top: -14px;
   position: absolute;
+}
+.fieldset__align-prix {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 4px;
+  margin: 0;
+}
+.fieldset dt {
+  margin: 0px;
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 212px;
+  white-space: nowrap;
+}
+.fieldset dd {
+  margin: 0px;
+}
+.fieldset h6 {
+  margin: 0px;
+  font-size: 18px;
 }
 
 .label {
   font-weight: 600;
+  font-size: 15px;
 }
 
 .btn-check {
   display: none;
 }
 .btn-check__icon {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .header {
@@ -377,12 +432,14 @@ a {
 }
 .header__arrow {
   font-size: 20px;
-  float: left;
-  padding-left: 20px;
-  padding-top: 8px;
+  top: 1.3rem;
+  left: 1rem;
+  position: absolute;
+}
+.header .arrow-left {
   color: #464646;
 }
-.header__arrow:hover {
+.header .arrow-left:hover {
   color: #ff79da;
 }
 .header__logo {
