--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,15 +1,42 @@
-@keyframes apparition  {
+@keyframes apparition {
   0% {
-    transform:translatey(10%);
-    opacity:0%
+    transform: translate(0px, 10px);
+    opacity: 0%;
   }
-    
   50% {
-    transform:translatey(5%);
-    opacity:0.1%;
+    transform: translate(0px, 5px);
+    opacity: 0.1%;
   }
-    
   100% {
-    transform:translatey(0%);
+    transform: translate(0px, 0px);
+  }
+}
+
+@keyframes checkbox {
+  from {
+    transform: rotateY(-100deg);
+    transform-origin: right;
+    opacity: 0;
+  }
+  to {
+    transform: rotateY(0);
+    transform-origin: right;
+    opacity: 1;
+  }
+}
+@keyframes check {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+@keyframes prix {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  100% {
+    transform: translate(-50px, 0px);
   }
 }
