--- a/css/styles.css
+++ b/css/styles.css
@@ -256,8 +256,14 @@ a {
   position: absolute;
   right: 10%;
   font-size: 26px;
-  margin-top: 30px;
+  margin-top: -4px;
+  background-color: initial;
+  border: none;
   z-index: 3;
+}
+.border-heart--heart {
+  right: 6%;
+  margin-top: 28px;
 }
 .border-heart:active {
   color: white;
@@ -276,11 +282,21 @@ a {
   position: absolute;
   right: 10%;
   font-size: 26px;
-  margin-top: 30px;
+  margin-top: -4px;
+  background-color: initial;
+  border: none;
   z-index: 2;
   transform: scaley(0);
   transition: transform 300ms;
   transform-origin: bottom;
+}
+.heart-colorer--heart {
+  right: 6%;
+  margin-top: 28px;
+}
+
+.heart {
+  font-size: 26px;
 }
 
 .btn-explorez {
