--- a/sass/components/_explication_fonctionnement.scss
+++ b/sass/components/_explication_fonctionnement.scss
@@ -23,11 +23,11 @@
             margin-bottom: nth($list: $margin, $n: 3);
             border-radius: 16px;
             border: none;
-            width: 100%;
+            width: 83%;
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 14px;
+            gap: 20px;
 
             .number {
                 border: 2px solid $color-primaire;
@@ -38,6 +38,10 @@
                 left: 7px;
                 background: $color-primaire;
                 color: $color-link;
+            }
+            
+            .text-number {
+                font-size: 15px;
             }
         
             &--3 {
