--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -26,10 +26,10 @@
 }
 @keyframes check {
   from {
-    rotate: 0deg;
+    transform: rotate(0deg);
   }
   to {
-    rotate: 360deg;
+    transform: rotate(360deg);
   }
 }
 @keyframes prix {
