animation d'apparition plats corrigé

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -9,7 +9,7 @@
 @import "./components/ancre_body.scss";
 @import "./components/explication_fonctionnement.scss";
 @import "./components/recherche_accueil.scss";
-@import "./components/icon_heart.scss";
+@import "./layout/icon_heart.scss";
 @import "./components/btn.scss";
 
 @import "./components/choix_plats_restos.scss";
