--- a/css/styles.css
+++ b/css/styles.css
@@ -83,12 +83,12 @@
   box-shadow: rgba(116, 116, 116, 0.5019607843) 0px 5px 9px;
 }
 .list-resto .restaurant__cards:hover {
-  box-shadow: rgba(65, 65, 65, 0.5019607843) 0px 5px 9px;
+  box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
 }
 .list-resto .restaurant__cards .nouveau {
   font-weight: 600;
-  font-size: 14px;
-  height: 14px;
+  font-size: 15px;
+  height: 15px;
   color: #069a4b;
   position: absolute;
   right: 10%;
@@ -106,7 +106,7 @@
   display: flex;
   flex-direction: column;
   gap: 3px;
-  padding: 12px;
+  padding: 13px;
   color: black;
 }
 .list-resto .restaurant h4 {
@@ -214,7 +214,7 @@ a {
   border: 2px solid #9356dc;
   padding: 5px 7px 2px 7px;
   border-radius: 25px;
-  margin: 0;
+  margin: 0px;
   position: absolute;
   left: 7px;
   background: #9356dc;
@@ -360,7 +360,7 @@ a {
   font-family: shrikhand;
   font-size: 24px;
   font-weight: 500;
-  padding-top: 26px;
+  padding-top: 60px;
   padding-left: 20px;
   margin: 0;
 }
@@ -375,7 +375,7 @@ a {
   padding-bottom: 6px;
   margin-top: 40px;
   font-size: 16px;
-  margin-left: 15px;
+  margin-left: 20px;
   font-weight: 500;
 }
 .titre-section--espace {
@@ -413,7 +413,7 @@ a {
   justify-content: space-between;
   align-items: center;
   padding-top: 4px;
-  margin: 0;
+  margin: 0px;
 }
 .fieldset dt {
   margin: 0px;
