--- a/sass/components/_explication_fonctionnement.scss
+++ b/sass/components/_explication_fonctionnement.scss
@@ -23,7 +23,7 @@
             margin-bottom: nth($list: $margin, $n: 3);
             border-radius: 16px;
             border: none;
-            width: 83%;
+            width: nth($list: $width, $n: 6);
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -33,7 +33,7 @@
                 border: 2px solid $color-primaire;
                 padding: 5px 7px 2px 7px;
                 border-radius: 25px;
-                margin: 0;
+                margin: nth($list: $margin, $n: 1);
                 position: absolute;
                 left: 7px;
                 background: $color-primaire;
@@ -41,7 +41,7 @@
             }
             
             .text-number {
-                font-size: 15px;
+                font-size: nth($list: $size, $n: 2);
             }
         
             &--3 {
