--- a/sass/components/_recherche_accueil.scss
+++ b/sass/components/_recherche_accueil.scss
@@ -15,7 +15,7 @@
             font-weight: 700;
             text-align: center;
             font-family: 'roboto';
-            font-size: 16px
+            font-size: nth($list: $size, $n: 3)
         }
     }
 }
